<?php

declare(strict_types=1);

namespace DoctrineMigrations;

use Doctrine\DBAL\Schema\Schema;
use Doctrine\Migrations\AbstractMigration;

final class Version20260216102800 extends AbstractMigration
{
    public function getDescription(): string
    {
        return '';
    }

    public function up(Schema $schema): void
    {
        $this->addSql('CREATE TABLE ai_log (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, prompt TEXT NOT NULL, response TEXT NOT NULL, model VARCHAR(50) NOT NULL, type VARCHAR(25) NOT NULL, token INT DEFAULT NULL, duration NUMERIC(8, 3) DEFAULT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, restaurant_id INT DEFAULT NULL, user_id INT DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_558C643B1E7706E ON ai_log (restaurant_id)');
        $this->addSql('CREATE INDEX IDX_558C643A76ED395 ON ai_log (user_id)');
        $this->addSql('CREATE TABLE cart (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, updated_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, user_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_BA388B7A76ED395 ON cart (user_id)');
        $this->addSql('CREATE TABLE cart_item (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, quantity INT DEFAULT 1 NOT NULL, cart_id INT NOT NULL, restaurant_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_F0FE25271AD5CDBF ON cart_item (cart_id)');
        $this->addSql('CREATE INDEX IDX_F0FE2527B1E7706E ON cart_item (restaurant_id)');
        $this->addSql('CREATE TABLE category (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, name VARCHAR(100) NOT NULL, slug VARCHAR(100) NOT NULL, description TEXT DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE TABLE faq_embedding (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, content TEXT NOT NULL, embedding JSON NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, faq_entry_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_CB7472904694B055 ON faq_embedding (faq_entry_id)');
        $this->addSql('CREATE TABLE faq_entry (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, question TEXT NOT NULL, answer TEXT NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE TABLE favorite (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, updated_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, user_id INT NOT NULL, restaurant_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_68C58ED9A76ED395 ON favorite (user_id)');
        $this->addSql('CREATE INDEX IDX_68C58ED9B1E7706E ON favorite (restaurant_id)');
        $this->addSql('CREATE TABLE image (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, file_name VARCHAR(255) NOT NULL, position INT DEFAULT 0 NOT NULL, restaurant_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_C53D045FB1E7706E ON image (restaurant_id)');
        $this->addSql('CREATE TABLE "order" (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, reference VARCHAR(50) NOT NULL, total_amount NUMERIC(10, 2) NOT NULL, stripe_session_id VARCHAR(255) DEFAULT NULL, stripe_payment_intent_id VARCHAR(255) DEFAULT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, status VARCHAR(255) DEFAULT \'en_attente\' NOT NULL, buyer_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_F52993986C755722 ON "order" (buyer_id)');
        $this->addSql('CREATE TABLE refund (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, amount NUMERIC(10, 2) NOT NULL, reason_refund TEXT NOT NULL, stripe_refund_id VARCHAR(255) DEFAULT NULL, status VARCHAR(255) DEFAULT \'en_attente\' NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, order_id INT NOT NULL, requested_by_id INT NOT NULL, processed_by_id INT DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_5B2C14588D9F6D38 ON refund (order_id)');
        $this->addSql('CREATE INDEX IDX_5B2C14584DA1E751 ON refund (requested_by_id)');
        $this->addSql('CREATE INDEX IDX_5B2C14582FFD4FD3 ON refund (processed_by_id)');
        $this->addSql('CREATE TABLE restaurant (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, name VARCHAR(255) NOT NULL, description TEXT DEFAULT NULL, address VARCHAR(255) NOT NULL, latitude DOUBLE PRECISION NOT NULL, longitude DOUBLE PRECISION NOT NULL, capacity INT NOT NULL, annual_revenue NUMERIC(12, 2) DEFAULT NULL, rent NUMERIC(10, 2) DEFAULT NULL, lease_remaining INT DEFAULT NULL, asking_price NUMERIC(12, 2) NOT NULL, pappers_url VARCHAR(255) DEFAULT NULL, view_count INT DEFAULT 0 NOT NULL, favorite_count INT DEFAULT 0 NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, updated_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, auction_date DATE DEFAULT NULL, auction_time TIME(0) WITHOUT TIME ZONE DEFAULT NULL, auction_location VARCHAR(255) DEFAULT NULL, auction_location_lat DOUBLE PRECISION DEFAULT NULL, auction_location_lng DOUBLE PRECISION DEFAULT NULL, ticket_price NUMERIC(8, 2) DEFAULT NULL, max_capacity INT DEFAULT 50 NOT NULL, tickets_sold INT DEFAULT 0 NOT NULL, status VARCHAR(255) DEFAULT \'brouillon\' NOT NULL, owner_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_EB95123F7E3C61F9 ON restaurant (owner_id)');
        $this->addSql('CREATE TABLE restaurant_category (restaurant_id INT NOT NULL, category_id INT NOT NULL, PRIMARY KEY (restaurant_id, category_id))');
        $this->addSql('CREATE INDEX IDX_26E9D72EB1E7706E ON restaurant_category (restaurant_id)');
        $this->addSql('CREATE INDEX IDX_26E9D72E12469DE2 ON restaurant_category (category_id)');
        $this->addSql('CREATE TABLE restaurant_embedding (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, content TEXT NOT NULL, embedding JSON NOT NULL, updated_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, restaurant_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_78CE0F89B1E7706E ON restaurant_embedding (restaurant_id)');
        $this->addSql('CREATE TABLE ticket (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, qr_code VARCHAR(255) NOT NULL, status VARCHAR(255) DEFAULT \'valide\' NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, restaurant_id INT NOT NULL, order_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_97A0ADA3B1E7706E ON ticket (restaurant_id)');
        $this->addSql('CREATE INDEX IDX_97A0ADA38D9F6D38 ON ticket (order_id)');
        $this->addSql('CREATE TABLE "user" (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, email VARCHAR(180) NOT NULL, roles JSON NOT NULL, password VARCHAR(255) NOT NULL, first_name VARCHAR(100) NOT NULL, last_name VARCHAR(100) NOT NULL, phone_number VARCHAR(20) DEFAULT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, is_verified BOOLEAN DEFAULT NULL, is_suspended BOOLEAN DEFAULT NULL, updated_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_IDENTIFIER_EMAIL ON "user" (email)');
        $this->addSql('CREATE TABLE user_preference_embedding (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, preferences_text TEXT NOT NULL, embedding JSON NOT NULL, updated_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, user_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_2C07E9FDA76ED395 ON user_preference_embedding (user_id)');
        $this->addSql('ALTER TABLE ai_log ADD CONSTRAINT FK_558C643B1E7706E FOREIGN KEY (restaurant_id) REFERENCES restaurant (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE ai_log ADD CONSTRAINT FK_558C643A76ED395 FOREIGN KEY (user_id) REFERENCES "user" (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE cart ADD CONSTRAINT FK_BA388B7A76ED395 FOREIGN KEY (user_id) REFERENCES "user" (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE cart_item ADD CONSTRAINT FK_F0FE25271AD5CDBF FOREIGN KEY (cart_id) REFERENCES cart (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE cart_item ADD CONSTRAINT FK_F0FE2527B1E7706E FOREIGN KEY (restaurant_id) REFERENCES restaurant (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE faq_embedding ADD CONSTRAINT FK_CB7472904694B055 FOREIGN KEY (faq_entry_id) REFERENCES faq_entry (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE favorite ADD CONSTRAINT FK_68C58ED9A76ED395 FOREIGN KEY (user_id) REFERENCES "user" (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE favorite ADD CONSTRAINT FK_68C58ED9B1E7706E FOREIGN KEY (restaurant_id) REFERENCES restaurant (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE image ADD CONSTRAINT FK_C53D045FB1E7706E FOREIGN KEY (restaurant_id) REFERENCES restaurant (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE "order" ADD CONSTRAINT FK_F52993986C755722 FOREIGN KEY (buyer_id) REFERENCES "user" (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE refund ADD CONSTRAINT FK_5B2C14588D9F6D38 FOREIGN KEY (order_id) REFERENCES "order" (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE refund ADD CONSTRAINT FK_5B2C14584DA1E751 FOREIGN KEY (requested_by_id) REFERENCES "user" (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE refund ADD CONSTRAINT FK_5B2C14582FFD4FD3 FOREIGN KEY (processed_by_id) REFERENCES "user" (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE restaurant ADD CONSTRAINT FK_EB95123F7E3C61F9 FOREIGN KEY (owner_id) REFERENCES "user" (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE restaurant_category ADD CONSTRAINT FK_26E9D72EB1E7706E FOREIGN KEY (restaurant_id) REFERENCES restaurant (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE restaurant_category ADD CONSTRAINT FK_26E9D72E12469DE2 FOREIGN KEY (category_id) REFERENCES category (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE restaurant_embedding ADD CONSTRAINT FK_78CE0F89B1E7706E FOREIGN KEY (restaurant_id) REFERENCES restaurant (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE ticket ADD CONSTRAINT FK_97A0ADA3B1E7706E FOREIGN KEY (restaurant_id) REFERENCES restaurant (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE ticket ADD CONSTRAINT FK_97A0ADA38D9F6D38 FOREIGN KEY (order_id) REFERENCES "order" (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE user_preference_embedding ADD CONSTRAINT FK_2C07E9FDA76ED395 FOREIGN KEY (user_id) REFERENCES "user" (id) NOT DEFERRABLE');
    }

    public function down(Schema $schema): void
    {
        // this down() migration is auto-generated, please modify it to your needs
        $this->addSql('ALTER TABLE ai_log DROP CONSTRAINT FK_558C643B1E7706E');
        $this->addSql('ALTER TABLE ai_log DROP CONSTRAINT FK_558C643A76ED395');
        $this->addSql('ALTER TABLE cart DROP CONSTRAINT FK_BA388B7A76ED395');
        $this->addSql('ALTER TABLE cart_item DROP CONSTRAINT FK_F0FE25271AD5CDBF');
        $this->addSql('ALTER TABLE cart_item DROP CONSTRAINT FK_F0FE2527B1E7706E');
        $this->addSql('ALTER TABLE faq_embedding DROP CONSTRAINT FK_CB7472904694B055');
        $this->addSql('ALTER TABLE favorite DROP CONSTRAINT FK_68C58ED9A76ED395');
        $this->addSql('ALTER TABLE favorite DROP CONSTRAINT FK_68C58ED9B1E7706E');
        $this->addSql('ALTER TABLE image DROP CONSTRAINT FK_C53D045FB1E7706E');
        $this->addSql('ALTER TABLE "order" DROP CONSTRAINT FK_F52993986C755722');
        $this->addSql('ALTER TABLE refund DROP CONSTRAINT FK_5B2C14588D9F6D38');
        $this->addSql('ALTER TABLE refund DROP CONSTRAINT FK_5B2C14584DA1E751');
        $this->addSql('ALTER TABLE refund DROP CONSTRAINT FK_5B2C14582FFD4FD3');
        $this->addSql('ALTER TABLE restaurant DROP CONSTRAINT FK_EB95123F7E3C61F9');
        $this->addSql('ALTER TABLE restaurant_category DROP CONSTRAINT FK_26E9D72EB1E7706E');
        $this->addSql('ALTER TABLE restaurant_category DROP CONSTRAINT FK_26E9D72E12469DE2');
        $this->addSql('ALTER TABLE restaurant_embedding DROP CONSTRAINT FK_78CE0F89B1E7706E');
        $this->addSql('ALTER TABLE ticket DROP CONSTRAINT FK_97A0ADA3B1E7706E');
        $this->addSql('ALTER TABLE ticket DROP CONSTRAINT FK_97A0ADA38D9F6D38');
        $this->addSql('ALTER TABLE user_preference_embedding DROP CONSTRAINT FK_2C07E9FDA76ED395');
        $this->addSql('DROP TABLE ai_log');
        $this->addSql('DROP TABLE cart');
        $this->addSql('DROP TABLE cart_item');
        $this->addSql('DROP TABLE category');
        $this->addSql('DROP TABLE faq_embedding');
        $this->addSql('DROP TABLE faq_entry');
        $this->addSql('DROP TABLE favorite');
        $this->addSql('DROP TABLE image');
        $this->addSql('DROP TABLE "order"');
        $this->addSql('DROP TABLE refund');
        $this->addSql('DROP TABLE restaurant');
        $this->addSql('DROP TABLE restaurant_category');
        $this->addSql('DROP TABLE restaurant_embedding');
        $this->addSql('DROP TABLE ticket');
        $this->addSql('DROP TABLE "user"');
        $this->addSql('DROP TABLE user_preference_embedding');
    }
}
